# vidtex

./: .gitignore  .vidtexrc  AUTHORS  Makefile.am  README.md  bedstead.c  bedstead.h  configure.ac  decoder.c  decoder.h  galax.c  galax.h  main.c  makefile
src/: Makefile  bedstead.c  bedstead.h  config.h  decoder.c  decoder.h  galax.c  galax.h  log.h  main.c  rc.c  rc.h  telesoft.c  telesoft.h  vidtex.1  vidtexrc
